<resources>
    <string name="app_name">KnowledgeNinja</string>
    <string name="title_activity_information">InformationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="solar_system_text">Solar System</string>
    <string name="space_text">Space</string>
    //Planets
    <string name="planet_1">Mercury</string>
    <string name="planet_2">Venus</string>
    <string name="planet_3">Earth</string>
    <string name="planet_4">Mars</string>
    <string name="planet_5">Jupiter</string>
    <string name="planet_6">Saturn</string>
    <string name="planet_7">Uranus</string>
    <string name="planet_8">Neptune</string>
    <string name="earth_fact_1">The Earth is the third planet from the sun. </string>
    <string name="earth_fact_2">The Earth is separated by distinct layers with a core, mantle and crust. Imagine Earth as a chocolate-covered cherry.</string>
    <string name="earth_fact_3">If you stick a pencil directly through the Earth at the point of rotation, these two points are the North and South poles. Geographically speaking, it’s where lines of longitude meet.</string>
    <string name="mercury_fact_1">Mercury is the smallest planet in our solar system – only slightly larger than Earths Moon.</string>
    <string name="venus_fact_1">Even though Mercury is closer to the Sun, Venus is the hottest planet in our solar system. </string>
    <string name="mars_fact_1">Mars is sometimes called the Red Planet. It is red because of rusty iron in the ground.</string>
    <string name="jupiter_fact_1">Jupiter is the biggest planet in our solar system. Jupiter is covered in swirling cloud stripe</string>
    <string name="saturn_fact_1">Like fellow gas giant Jupiter, Saturn is a massive ball made mostly of hydrogen and helium.</string>
    <string name="uranus_fact_1">Uranus is the seventh planet from the Sun, and has the third-largest diameter in our solar system</string>
    <string name="neptune_fact_1">It is made of a thick soup of water, ammonia, and methane over an Earth-sized solid center.</string>


    <string name="lion_fact_1">Lions are the only social big cats and live in groups called prides. A pride can consist of up to 30 lions.</string>
    <string name="elephant_fact_1">Elephants are the largest land animals, with males weighing up to 6 tons. They have a highly developed social structure and display complex behaviors.</string>
    <string name="cheetah_fact_1">Cheetahs are the fastest land animals, capable of reaching speeds up to 70 mph (112 km/h) in short bursts to catch their prey.</string>
    <string name="dolphin_fact_1">Dolphins are highly intelligent marine mammals known for their playful behavior. They use echolocation to navigate and find food.</string>
    <string name="bald_eagle_fact_1">The bald eagle is a majestic bird of prey and a symbol of the United States. It has a wingspan of up to 7 feet (2.1 meters) and builds the largest nests of any bird species.</string>

</resources>